# grs

./: .gitattributes  .gitignore  .gitlab-ci.yml  .lfsconfig  .readthedocs.yaml  Dockerfile  Dockerfile-snap  Jenkinsfile  Jenkinsfile-snap  LICENSE  LICENSE.md  Makefile  README.md  amalthee_launcher.pbs  config_hal.yml  ecmwf_cams.e41835802  ecmwf_cams.o41835802  environment.yml  global_config.yml  grs_gernez.o23372310  grs_jegou.e23376907  grs_jegou.o21921545  grs_jegou.o21921551  grs_jegou.o23376907  grs_laucher.pbs  grs_launcher.pbs  grs_mpi_laucher.pbs  grs_mpi_launcher.pbs  grs_validation_launcher.pbs  grsdata.zip.REMOVED.git-id  install-miniforge.bash  launch_grs_exemple.pbs  launcher.py  pbs_ecmwf.pbs  pypi_README.rst  pyproject.toml  requirements.txt  run.py  run_docker.sh  setup.py  (+2 more)
conda/: conda_grs.sh  grs_conda_3.6.yml  grs_py3.6.yml
data/aux/: mean_rglint_small_angles_vza_le_12_sza_le_60.txt
docs/: Makefile  conf.py  environment.yml  index.rst  modules.rst  page.rst  requirements.txt
docs/_autosummary/: aeronet.rst  (+6 more)
ecmwf/: download_cams_all.py  download_cams_cds.py  download_cams_cds_day.py  pbs_cds.pbs  pbs_ecmwf.pbs
exe/: .~lock.list_grs_cnes_obs2mod.csv#  List_images_grs_template.csv  acix_grs_proc.py  aeronet-oc_sites.txt  amazone_sites.txt  call_amalthee.py  call_subprocess.py  call_subprocess_multiproc.py  download_list.py  global_config.yml  grs_call.py  grs_from_list.py  grs_proc_sites.py  grs_tiles_cnes.py  grs_tiles_cnes_v2.py  grs_validation.py  hymotep_config.yml  immotep_config.yml  launcher.py  list_grs_cnes_gernez.csv  list_grs_cnes_obs2mod.csv  list_grs_cnes_template.csv  proc_aeronet_sites.py  procutils.py  sync_rclone_dropbox.sh  test_mp.py  upload_L2_dropbox.sh
grs/: __init__.py  acutils.py  anglegen.py  auxdata.py  cams.py  config.py  config_cnes.py  config_local.py  config_mistraou.py  config_template.py  config_template.yml  config_template_cnes.yml  grs_process.py  grs_process_dev.py  mask.py  output.py  product.py  run.py  s2_angle.py  smac.py  test_snappy_landsat_op.py  test_snappy_resampling.py  utils.py
notebook/: Untitled.ipynb  grs_v2_demo.ipynb  grs_v2_l2bgen.ipynb  grs_v2_opac_formation_v20240222.ipynb  grs_v2_process.ipynb  grs_v2_prototyping-cnes.ipynb  grs_v2_prototyping.ipynb  grs_v2_visu.ipynb  s2_ndvi.ipynb  s2_ndvi.py
test/: grs_test_ v2.py  grs_test_ v2_cnes.py
(+342 files in other folders)
