## pyproject.toml
#[build-system]
#requires      = ["setuptools>=61.0.0", "wheel"]
#build-backend = "setuptools.build_meta"
#
#[project]
#name = "grs"
#version = "2.1.6"
#description = "GRS processor for atmospheric correction of high-spatial resolution and multispectral satellite images"
#readme = "README.md"
#authors = [{ name = "Tristan Harmel", email = "tristan.harmel@gmail.com" }]
#license = { file = "LICENSE" }
#classifiers = [
#    "License :: OSI Approved :: Apache Software License",
#    "Programming Language :: Python",
#    "Programming Language :: Python :: 3",
#]
#keywords = ["Sentinel-2","Landsat-8","Landsat-9","atmospheric correction", "EO satellite"]
#dependencies = [
#    "eoreader >= 0.21.1",
#  ]
#requires-python = ">=3.9"
#
#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
#
#[project.urls]
#Homepage = "https://github.com/Tristanovsk/grs"
#
##[project.scripts]
##realpython = "GRSdriver.__main__:main"